03-service-mesh-k8s/k8s/manifests/thirdparty.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thirdparty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thirdparty
  template:
    metadata:
      labels:
        app: thirdparty
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
    spec:
      containers:
      - name: thirdparty
        image: consul-onboarding-thirdparty:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: thirdparty
spec:
  selector:
    app: thirdparty
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
